--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/prompt-sync": "^4.2.0",
+    "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "openai": "^3.1.0",
     "prompt-sync": "^4.2.0"
